--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ include LICENSE
 include README.rst
 
 recursive-include tests *
+recursive-include parrot_integrations *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
